fixed layout issues

--- a/assets/styles/_general.scss
+++ b/assets/styles/_general.scss
@@ -8,7 +8,7 @@
 //}
 
 #main {
-  padding-top: $navbar-height + 1rem;
+  padding-top: $navbar-height + 1.25rem;
   padding-bottom: 40px;
   min-height: 80vh;
 }
